changed skill model for frontend

--- a/src/main/resources/META-INF/resources/css/ext/screen.css
+++ b/src/main/resources/META-INF/resources/css/ext/screen.css
@@ -1165,7 +1165,7 @@
     font-size: 1.5em;
     font-weight: bold;
     text-decoration: none;
-    background: transparent url(../img/logo.png) no-repeat left center;
+    background: transparent url(../../img/logo.png) no-repeat left center;
     background-size: 75px auto;
     padding: 20px 0 20px 90px;
     color: black;
